--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -69,14 +69,7 @@ else
 @:@EmptyLine
 @:// MarshalJSON is the custom marshaler for @(Model.Name).
 @:func (@(Model.Name.FixedValue.ToIdiomaticShortName()) @(Model.Name))MarshalJSON() ([]byte, error){
-    @if ((Model.BaseModelType as CompositeTypeGo).DiscriminatorEnumExists)
-    {
-    @:@(Model.Name.FixedValue.ToIdiomaticShortName()).@((Model.BaseModelType as CompositeTypeGo).PolymorphicDiscriminatorProperty.Name) = @(Model.DiscriminatorEnumValue)
-    }
-    else
-    {
-    @:@(Model.Name.FixedValue.ToIdiomaticShortName()).@(Model.BaseModelType.PolymorphicDiscriminatorProperty.Name) = @(Model.DiscriminatorEnumValue)
-    }
+    @:@(Model.Name.FixedValue.ToIdiomaticShortName()).@(Model.PolymorphicProperty) = @(Model.DiscriminatorEnumValue)
     @:type Alias @(Model.Name)
     @:return json.Marshal(&struct {
         @:Alias
