--- a/src/Templates/EnumTemplate.cshtml
+++ b/src/Templates/EnumTemplate.cshtml
@@ -6,7 +6,7 @@
 @{
     var constants = Model.Constants.Keys.OrderBy(v => v);
     var modelName = CodeNamerGo.Instance.CamelCase(Model.Name);
-    var modelPhrase = Model.Name.FixedValue.ToPhrase();
+    var modelPhrase = Model.Name.Value.ToPhrase();
 }
 
 @WrapComment("// ", Model.Documentation)
