--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -28,7 +28,7 @@ func (client @(Model.Owner)) @(Model.MethodSignature) (@Model.MethodReturnSignat
     @:resultChan := make(chan @(Model.MethodReturnType), 1)
     @:errChan:= make(chan error, 1)
 }
-@if ((Model.CodeModel as CodeModelGo).ShouldValidate)
+@if ((Model.CodeModel as CodeModelGo).ShouldValidate && !Model.ParameterValidations.IsNullOrEmpty())
 {
     @:if err := validation.Validate([]validation.Validation{
     @:@(Model.ParameterValidations)}); err != nil {
