Revert "Replaced FixedValue with Value (#15)"
This reverts commit 555d3704e92a6806ab80dc8dce2ebcedd61aef86.

--- a/src/Templates/EnumTemplate.cshtml
+++ b/src/Templates/EnumTemplate.cshtml
@@ -6,7 +6,7 @@
 @{
     var constants = Model.Constants.Keys.OrderBy(v => v);
     var modelName = CodeNamerGo.Instance.CamelCase(Model.Name);
-    var modelPhrase = Model.Name.Value.ToPhrase();
+    var modelPhrase = Model.Name.FixedValue.ToPhrase();
 }
 
 @WrapComment("// ", Model.Documentation)
