--- a/src/Templates/MethodGroupTemplate.cshtml
+++ b/src/Templates/MethodGroupTemplate.cshtml
@@ -63,8 +63,8 @@ func New@(Model.ClientName)(@(Model.GlobalParameters)) @(Model.ClientName) {
     {
     @WrapComment("// ", string.Format("New{0}WithAuthFile creates an instance of the {0} client.", Model.ClientName))
     <text>
-    func New@(Model.ClientName)WithAuthFile() (@(Model.ClientName), error) {
-        c, err := NewWithAuthFile()
+    func New@(Model.ClientName)WithAuthFile(@(Model.AuthParameters)) (@(Model.ClientName), error) {
+        c, err := NewWithAuthFile(@(Model.HelperAuthParameters))
         return @(Model.ClientName){c}, err
     }
     </text>
