--- a/src/Templates/ServiceClientTemplate.cshtml
+++ b/src/Templates/ServiceClientTemplate.cshtml
@@ -99,12 +99,12 @@ func New(@(Model.GlobalParameters))@(Model.BaseClient) {
     @WrapComment("// ", string.Format("NewWithAuthFile creates an instance of the {0} client.", Model.BaseClient))
     <text>
     func NewWithAuthFile(@(Model.AuthParameters)) (c @(Model.BaseClient), err error) {
-        authentication, err := auth.GetTokenFromAuthFile(DefaultBaseURI)
+        authentication, err := auth.GetClientSetup(DefaultBaseURI)
         if err != nil {
             return
         }
         c = NewWithBaseURI(@(Model.HelperAuthParameters))
-        c.Authorizer = authentication.Authorizer
+        c.Authorizer = authentication
         return
     }
     </text>
