Add new templates to support next-gen SDK generation.
A new set of templates has been added to the generator that uses the new
request pipeline model; this is currently used only for storage but
should be able to be adopted by other parts of the SDK in the future.
By default the old templates (v1) are used so no observable changes are
made to existing SDKs.  To specify a template version pass the
go-template-ver param (e.g. --go-template-ver=v2).  There are v1 and v2
templates at this time.
Other changes of note.
Added support for XML marshalling and unmarshalling to the code models;
this has not been finalized for the v1 templates.
Added optional param file-prefix to add a prefix to generated file
names.
Consolidated the plethora of nil checking extensions into one method.
Added support for paramater groups.
Cleaned up v1 templates to use <text/> tags instead of @: littered
throughout the code.
Generate a "none" enum type for v2 templates.
Use custom Marker type for pageable results.
Emit files names using snake casing.
Removed hard-coded pipeline imports path, it is now specified via the
go-pipeline-import argument.
Added argument go-export-clients which is a boolean to toggle if client
types and their ctors are exported or not (defaults to true).
Added support for the etag format on strings.
For v2 templates, synthetic types are named after their method, e.g. a
method Foo that returns a stream would have a return type of
FooResponse.
Response type methods are now returned in ascended sorted order.
Added StatusCode() and Status() convenience methods to response types.
Generate a Body() method for stream response synthetic types that
returns the raw HTTP response Body.
Added model type EnumValueGo to better abstract how enum value names are
generated (needs improvement).
Don't emit useless enum value documentation, just do  "FooValue ..." so
the linter is happy (use description if available).
For model types that don't have documentation emit doc comments as
"FooTy

--- a/src/Templates/v1/MethodGroupTemplate.cshtml
+++ b/src/Templates/v1/MethodGroupTemplate.cshtml
@@ -9,8 +9,6 @@
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.MethodGroupGo>
 @{
     var modelName = CodeNamerGo.Instance.CamelCase(Model.Name);
-    var methods = new List<MethodGo>();
-    Model.Methods.Cast<MethodGo>().OrderBy(m => m.Name.Value).ForEach(m => methods.Add(m));
 }
 
 package @Model.PackageName
@@ -60,7 +58,7 @@ func New@(Model.ClientName)(@(Model.GlobalParameters)) @(Model.ClientName) {
     @EmptyLine
 }
 
-@foreach (var method in methods)
+@foreach (var method in Model.MethodsGo)
 {
 @:@(Include(new MethodTemplate(), method))
 @:@EmptyLine
