--- a/src/Templates/v1/ModelsTemplate.cshtml
+++ b/src/Templates/v1/ModelsTemplate.cshtml
@@ -11,11 +11,6 @@
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CodeModelGo>
 @{
     var imports = Model.ModelImports;
-    var enums = Model.EnumTypes.Cast<EnumTypeGo>().ToList();
-    enums.Sort(delegate(EnumTypeGo lhs, EnumTypeGo rhs) { return lhs.Name.FixedValue.CompareTo(rhs.Name); });
-
-    var modelTypes = Model.ModelTypes.Cast<CompositeTypeGo>().ToList();
-    modelTypes.Sort(delegate (CompositeTypeGo x, CompositeTypeGo y) { return x.Name.Value.CompareTo(y.Name.Value); });
 }
 package @Model.Namespace
 @EmptyLine
@@ -34,14 +29,14 @@ foreach (var import in imports)
 @EmptyLine
 }
 
-@foreach (var e in enums) {
+@foreach (var e in Model.Enums)
+{
 @:@(Include(new EnumTemplate(), e))
 @EmptyLine
-@:
 }
 
-@foreach (var mt in modelTypes) {
+@foreach (var mt in Model.Models)
+{
 @:@(Include(new ModelTemplate(), mt))
 @EmptyLine
-@:
 }
