--- a/src/Templates/v1/ModelsTemplate.cshtml
+++ b/src/Templates/v1/ModelsTemplate.cshtml
@@ -5,7 +5,7 @@
 @using AutoRest.Go
 @using AutoRest.Core.Model
 @using AutoRest.Go.Model
-@using AutoRest.Go.Templates
+@using AutoRest.Go.Templates.v1
 @using AutoRest.Core.Utilities
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CodeModelGo>
