Back out the v1 template split refactor.
Attempting to build and maintain two distinct sets of templates in the
same generator does not work, so backing out those changes.

--- a/src/Templates/MethodGroupTemplate.cshtml
+++ b/src/Templates/MethodGroupTemplate.cshtml
@@ -4,7 +4,7 @@
 @using AutoRest.Core.Utilities
 @using AutoRest.Go
 @using AutoRest.Go.Model
-@using AutoRest.Go.Templates.v1
+@using AutoRest.Go.Templates
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.MethodGroupGo>
 @{
