--- a/src/Templates/EnumTemplate.cshtml
+++ b/src/Templates/EnumTemplate.cshtml
@@ -2,7 +2,7 @@
 @using System.Collections.Generic
 @using System.Linq
 
-@inherits AutoRest.Core.Template<AutoRest.Go.Decorators.v1.EnumTypeGoDecorator>
+@inherits AutoRest.Core.Template<AutoRest.Go.Model.EnumTypeGo>
 @{
     var constants = new Dictionary<string, string>();
     foreach (var val in Model.Values)
