--- a/src/Templates/ServiceClientTemplate.cshtml
+++ b/src/Templates/ServiceClientTemplate.cshtml
@@ -1,6 +1,6 @@
 ﻿@using AutoRest.Go
 @using AutoRest.Core.Model
-@using AutoRest.Go.Templates.v1
+@using AutoRest.Go.Templates
 @using AutoRest.Go.Model
 @using AutoRest.Core.Utilities
 @using System.Linq
