--- a/src/Templates/EnumTemplate.cshtml
+++ b/src/Templates/EnumTemplate.cshtml
@@ -1,7 +1,6 @@
-﻿@using AutoRest.Go.Model;
-@using System.Linq;
-
-@using AutoRest.Go;
+﻿@using AutoRest.Go
+@using AutoRest.Go.Model
+@using System.Linq
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.EnumTypeGo>
 @{
