--- a/src/Templates/MethodGroupTemplate.cshtml
+++ b/src/Templates/MethodGroupTemplate.cshtml
@@ -1,10 +1,10 @@
-﻿@using System;
-@using System.Collections.Generic;
-@using System.Linq;
-@using AutoRest.Core.Utilities;
+﻿@using AutoRest.Core.Utilities
 @using AutoRest.Go
 @using AutoRest.Go.Model
 @using AutoRest.Go.Templates
+@using System
+@using System.Collections.Generic
+@using System.Linq
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.MethodGroupGo>
 
