--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -1,8 +1,8 @@
-﻿@using AutoRest.Go
-@using AutoRest.Core.Model
+﻿@using AutoRest.Core.Model
+@using AutoRest.Core.Utilities
+@using AutoRest.Go
 @using AutoRest.Go.Model
 @using AutoRest.Go.Templates
-@using AutoRest.Core.Utilities
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CompositeTypeGo>
 @{
