--- a/src/Templates/ServiceClientTemplate.cshtml
+++ b/src/Templates/ServiceClientTemplate.cshtml
@@ -1,8 +1,8 @@
-﻿@using AutoRest.Go
-@using AutoRest.Core.Model
+﻿@using AutoRest.Core.Model
+@using AutoRest.Core.Utilities
+@using AutoRest.Go
 @using AutoRest.Go.Templates
 @using AutoRest.Go.Model
-@using AutoRest.Core.Utilities
 @using System.Linq
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CodeModelGo>
