--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -1,11 +1,11 @@
-﻿@using System.Collections.Generic;
-@using System.Linq;
-@using System.Text;
-@using System;
-@using AutoRest.Core.Model
+﻿@using AutoRest.Core.Model
 @using AutoRest.Core.Utilities
 @using AutoRest.Go
 @using AutoRest.Go.Model
+@using System
+@using System.Collections.Generic
+@using System.Linq
+@using System.Text
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.MethodGo>
 
