--- a/src/Templates/ModelsTemplate.cshtml
+++ b/src/Templates/ModelsTemplate.cshtml
@@ -1,12 +1,11 @@
-﻿@using System;
-@using System.Collections.Generic;
-@using System.Linq;
-
+﻿@using AutoRest.Core.Model
+@using AutoRest.Core.Utilities
 @using AutoRest.Go
-@using AutoRest.Core.Model
 @using AutoRest.Go.Model
 @using AutoRest.Go.Templates
-@using AutoRest.Core.Utilities
+@using System
+@using System.Collections.Generic
+@using System.Linq
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CodeModelGo>
 @{
