--- a/src/Templates/ResponderPolicy.cshtml
+++ b/src/Templates/ResponderPolicy.cshtml
@@ -4,7 +4,7 @@
 @using AutoRest.Go.Model
 @using AutoRest.Core.Utilities
 @using System.Linq
-@using System.Collections.Generic;
+@using System.Collections.Generic
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CodeModelGo>
 package @Model.Namespace
