--- a/src/Templates/ResponseError.cshtml
+++ b/src/Templates/ResponseError.cshtml
@@ -1,10 +1,10 @@
-﻿@using AutoRest.Go
-@using AutoRest.Core.Model
-@using AutoRest.Go.Templates
-@using AutoRest.Go.Model
+﻿@using AutoRest.Core.Model
 @using AutoRest.Core.Utilities
+@using AutoRest.Go
+@using AutoRest.Go.Model
+@using AutoRest.Go.Templates
+@using System.Collections.Generic
 @using System.Linq
-@using System.Collections.Generic;
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CodeModelGo>
 package @Model.Namespace
