Refactor codegen for long-running operations.
LROs will now return a future allowing the caller to get status on the
operation and control polling.  The Go routines have also been removed.

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -18,62 +18,40 @@
 </text>
 }
 
-func (client @(Model.Owner)) @(Model.MethodSignature) (@Model.MethodReturnSignature(false)) {
-@if (Model.ReturnViaChannel)
-{
-<text>
-    resultChan := make(chan @(Model.MethodReturnType), 1)
-    errChan:= make(chan error, 1)
-</text>
-}
+func (client @(Model.Owner)) @(Model.MethodSignature) (@Model.MethodReturnSignature()) {
 @if ((Model.CodeModel as CodeModelGo).ShouldValidate && !Model.ParameterValidations.IsNullOrEmpty())
 {
 <text>
     if err := validation.Validate([]validation.Validation{
     @(Model.ParameterValidations)}); err != nil {
-    @if (Model.ReturnViaChannel)
-    {
-    <text>
-    errChan @("<-") @(Model.ValidationError)
-    close(errChan)
-    close(resultChan)
-    return resultChan, errChan
-    </text>
+        return result, @(Model.ValidationError)
     }
-    else
-    {
-    @:return result, @(Model.ValidationError)
-    }
-}
 @EmptyLine
 </text>
 }
-@if (Model.ReturnViaChannel)
-{
-<text>
-    go func() {
-        var err error
-        var result @(Model.MethodReturnType)
 
-        defer func() {
-            if err != nil {
-                errChan @("<-") err
-            }
-            resultChan @("<-") result
-            close(resultChan)
-            close(errChan)
-        }()
-</text>
-}
     req, err := client.@(Model.PreparerMethodName)(@(Model.HelperInvocationParameters(false)))
     if err != nil {
         err = @(Model.AutorestError("Failure preparing request"))
         return
     }
 @EmptyLine
+@if (Model.IsLongRunningOperation())
+{
+<text>
+    result, err = client.@(Model.SenderMethodName)(req)
+    if err != nil {
+        err = @(Model.AutorestError("Failure sending request", "resp", "result.Response()"))
+        return
+    }
+</text>
+}
+else
+{
+<text>
     resp, err := client.@(Model.SenderMethodName)(req)
     if err != nil {
-        @(Model.Response)
+        @(Model.Response(false))
         err = @(Model.AutorestError("Failure sending request", "resp"))
         return
     }
@@ -82,18 +60,10 @@ func (client @(Model.Owner)) @(Model.MethodSignature) (@Model.MethodReturnSignat
     if err != nil {
         err = @(Model.AutorestError("Failure responding to request", "resp"))
     }
-@if (Model.ReturnViaChannel)
-{
-<text>
-    }()
-    return resultChan, errChan
 </text>
 }
-else
-{
-    @EmptyLine
-    @:return
-}
+@EmptyLine
+    return
 }
 
 @EmptyLine
@@ -161,25 +131,44 @@ func (client @(Model.Owner)) @(Model.PreparerMethodName)(@(Model.MethodParameter
     }
 </text>
 }
-
-    @(Model.IsLongRunningOperation()
-        ? "return preparer.Prepare(&http.Request{Cancel: cancel})"
-        : "return preparer.Prepare(&http.Request{})")
+    return preparer.Prepare(&http.Request{})
 }
 
+@{ 
+    var senderRetType = "*http.Response";
+    if (Model.IsLongRunningOperation())
+    {
+        senderRetType = Model.MethodReturnType;
+    }
+}
 
 @EmptyLine
 // @(Model.SenderMethodName) sends the @(Model.Name) request. The method will close the
 // http.Response Body if it receives an error.
-func (client @(Model.Owner)) @(Model.SenderMethodName)(req *http.Request) (*http.Response, error) {
+func (client @(Model.Owner)) @(Model.SenderMethodName)(req *http.Request) (@senderRetType, error) {
+@if (Model.IsLongRunningOperation())
+{
+<text>
+    sender := autorest.DecorateSender(client, azure.DoRetryWithRegistration(client.Client))
+    future := azure.NewFuture(req)
+    _, err := future.Done(sender)
+    f := @(senderRetType){Future: future}
+    return f, err
+</text>
+}
+else
+{
+<text>
     return autorest.SendWithSender(client,
         @(Model.SendDecorators.EmitAsArguments()))
+</text>
+}
 }
 
 @EmptyLine
 // @(Model.ResponderMethodName) handles the response to the @(Model.Name) request. The method always
 // closes the http.Response Body.
-func (client @(Model.Owner)) @(Model.ResponderMethodName)(resp *http.Response) (@(Model.MethodReturnSignature(true))) { 
+func (client @(Model.Owner)) @(Model.ResponderMethodName)(resp *http.Response) (@Model.ResponderReturnSignature()) { 
     @if (Model.ReturnValue().Body.IsStreamType())
     {
     @:result.Value = &resp.Body
@@ -187,7 +176,7 @@ func (client @(Model.Owner)) @(Model.ResponderMethodName)(resp *http.Response) (
     err = autorest.Respond(
         @(Model.RespondDecorators.EmitAsArguments()))
 
-    @(Model.Response)
+    @(Model.Response(true))
     return
 }
 
@@ -196,7 +185,7 @@ func (client @(Model.Owner)) @(Model.ResponderMethodName)(resp *http.Response) (
 <text>
 @EmptyLine
 // @(Model.NextMethodName) retrieves the next set of results, if any.
-func (client @(Model.Owner)) @(Model.NextMethodName)(lastResults @(Model.ReturnValue().Body.Name)) (@Model.MethodReturnSignature(true)) {
+func (client @(Model.Owner)) @(Model.NextMethodName)(lastResults @(Model.ReturnValue().Body.Name)) (@Model.MethodReturnSignature()) {
     req, err := lastResults.@((Model.ReturnValue().Body as CompositeTypeGo).PreparerMethodName)()
     if err != nil {
         return result, @(Model.AutorestError("Failure preparing next results request"))
@@ -208,7 +197,7 @@ func (client @(Model.Owner)) @(Model.NextMethodName)(lastResults @(Model.ReturnV
     @EmptyLine
     resp, err := client.@(Model.SenderMethodName)(req)
     if err != nil {
-        @(Model.Response)
+        @(Model.Response(false))
         return result, @(Model.AutorestError("Failure sending next results request", "resp"))
     }
 
