--- a/src/Templates/ModelsTemplate.cshtml
+++ b/src/Templates/ModelsTemplate.cshtml
@@ -11,7 +11,7 @@
     var enums = Model.EnumTypes.Cast<EnumTypeGo>().ToList();
     enums.Sort(delegate(EnumTypeGo lhs, EnumTypeGo rhs) { return lhs.Name.FixedValue.CompareTo(rhs.Name); });
 
-    var modelTypes = Model.ModelTypes.Cast<CompositeTypeGo>().ToList();
+    var modelTypes = Model.ModelTypes.Cast<CompositeTypeGo>().Union(Model.FutureTypes).ToList();
     modelTypes.Sort(delegate (CompositeTypeGo x, CompositeTypeGo y) { return x.Name.Value.CompareTo(y.Name.Value); });
 }
 package @Model.Namespace
