Add net/url package for custom base URIs.

--- a/src/Templates/MethodGroupTemplate.cshtml
+++ b/src/Templates/MethodGroupTemplate.cshtml
@@ -28,6 +28,10 @@ package @Model.PackageName
 import (
 @foreach (var import in Model.Imports)
 {
+    if (Model.CodeModel.ToCodeModelGo().IsCustomBaseUri)
+    {
+        @:"net/url"
+    }
     @:@(import)
 }
 )
